Fix navigation header decoration on mobile

--- a/web/src/components/Navigation/Navigation.module.scss
+++ b/web/src/components/Navigation/Navigation.module.scss
@@ -20,6 +20,8 @@
       opacity: 1;
 
       padding: 1rem 0;
+      padding-top: 0;
+
       color: var(--text1);
       background-color: var(--surface1-translucent);
 
@@ -37,25 +39,28 @@
     }
   }
 
-  & ul li a {
-    display: block;
-    position: relative;
-    color: inherit;
-    text-decoration: none;
-    text-transform: uppercase;
+  & ul li {
+    & a {
+      display: block;
+      width: fit-content;
+      position: relative;
+      color: inherit;
+      text-decoration: none;
+      text-transform: uppercase;
 
-    &::after {
-      position: absolute;
-      color: currentColor;
-      fill: currentColor;
-      content: ' ';
-      bottom: 0;
-      left: 0;
-      width: 100%;
-      height: 2px;
-      @include h.straightSquiggle();
-      background-repeat: no-repeat;
-      background-size: cover;
+      &::after {
+        position: absolute;
+        color: currentColor;
+        fill: currentColor;
+        content: ' ';
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 2px;
+        @include h.straightSquiggle();
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
     }
 
     @include bp.breakpoint(medium, max) {
